# dcl

./: .env.template  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Makefile  NOTICE.yml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yaml
dcl/: __init__.py
dcl/criterions/: __init__.py  contrastive.py
dcl/datajoint/: db_schema.py  login.py  populate.py  schema.py  sweep.py  utils.py
dcl/datasets/: base.py  splits.py  synthetic.py  timeseries.py
dcl/distributions/: restrictions.py  time_distributions.py
dcl/experiments/: experiments.py
dcl/loader/: __init__.py  contrastive.py  sequence.py
dcl/metrics/: __init__.py  dynamics.py  identifiability.py  utils.py
dcl/models/: __init__.py  encoder.py  mixing.py  mixing_mlp.py  utils.py
dcl/models/dynamics/: __init__.py  linear_dynamics.py  mse_logits.py  nonlinear_dynamics.py  slds.py  switching_dynamics.py  utils.py
dcl/solver/: __init__.py  contrastive_solver.py  dynamics_solver.py  optimizer.py
dcl/utils/: analysis.py  checkpoints.py  configurable.py  datatypes.py  git_check.py  jaxtyping.py  rotation_matrix.py  temperature_scheduler.py  torch.py
notebooks/: README.md  plotting.py  requirements.txt
slurm/: populate.sh  populate_juwels.sh
sweeps/: README.md  reproduce_table1.py
tests/: test_gt_dynamics.py  test_infonce.py  test_integration.py  test_loss.py  test_model.py
tests/datasets/: test_lorenz.py  test_synthetic_dataset.py
tests/metrics/: test_dynR2.py  test_lds_error.py  test_linear_assignment.py
