[metadata]
name = dcl
version = attr: dcl.__version__

[options]
python_requires = >=3.10.0
packages = find:
exclude = tests

install_requires =
    ipykernel
    typeguard==2.13.3
    jaxtyping>=0.2.38
    python-dotenv
    numpy<2.0.0
    scikit-learn>=1.4.0
    #scikit-learn-extra>=0.3.0
    git-python
    diskcache
    cython
    cloudpickle
    plotly
    datajoint==0.14.3
